add return_id_only to jobs get api
