# rest_service/api/controllers/jobs.js
@@ -41,10 +41,12 @@ async function get(req, res) {
             }
         }
 
+        let return_id_only = req.query.return_id_only ? true : false;
+
         //if start and end was set, we cannot use cache mode
-        if (start != 0 || end != 100) {
-            let a_jobs = await ffastrasHistoryHelper.getHistoryJobs(start, end, req.query.jobid, variablesFilter);
-            let a_active = await ffastrasActiveJobHelper.getActiveJobs(start, end, req.query.jobid);
+        if (start != 0 || end != 100 || return_id_only) {
+            let a_jobs = await ffastrasHistoryHelper.getHistoryJobs(start, end, req.query.jobid, variablesFilter, return_id_only);
+            let a_active = await ffastrasActiveJobHelper.getActiveJobs(start, end, req.query.jobid, return_id_only);
             let returnobj = { discovery: req.headers.referer, history: a_jobs, active: a_active }
             res.json(returnobj)
             console.timeEnd(benchmarkId);
